<resources>
    <string name="app_name">Taxi_Project</string>
    <string name="company_name">NEIGHBOURHOOD TAXI</string>
    <string name="nav_menu">Navigation menu</string>
    <string name="btn_save">Save</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_car">Car</string>
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_done">Done</string>
    <string name="btn_close">Close</string>
    <string name="btn_details">Details</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_book">Book</string>
    <string name="btn_approve">Approve</string>
    <string name="btn_reject">Reject</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_favorite_rides">Favorite Rides</string>
    <string name="menu_ride_history">Ride History</string>
    <string name="menu_usage_report">Usage Report</string>
    <string name="menu_chat">Support</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <string name="menu_block">Block User</string>
    <string name="menu_add_driver">Add Driver</string>
    <string name="menu_panic_history">Panic History</string>
    <string name="menu_edit_requests">Edit Requests</string>
    <string name="profile_avatar_content_description">User Avatar</string>
    <string name="profile_change_image">Change image</string>
    <string name="profile_change_password">Change password</string>
    <string name="profile_default_name">Name Surname</string>
    <string name="profile_default_email">email@gmail.com</string>
    <string name="label_first_name">Name</string>
    <string name="label_last_name">Surname</string>
    <string name="label_email">Email</string>
    <string name="label_phone">Phone</string>
    <string name="label_password">Password</string>
    <string name="label_address">Address</string>
    <string name="label_city">City</string>
    <string name="label_car_model">Model</string>
    <string name="label_licence_plate">Licence plate</string>
    <string name="label_type">Type</string>
    <string name="label_num_seats">Number of seats</string>
    <string name="label_child_seat">Child seat available</string>
    <string name="label_pet_friendly">Pet friendly</string>
    <string name="label_pet_friendly_full">Pet friendly: Yes</string>
    <string name="label_child_seat_full">Child seat available: No</string>
    <string name="profile_yes">Yes</string>
    <string name="profile_no">No</string>
    <string name="profile_unknown">Unknown</string>
    <string name="profile_pet_friendly_fmt">Pet friendly: %1$s</string>
    <string name="profile_child_seat_fmt">Child seat available: %1$s</string>
    <string name="profile_active_minutes_fmt">Active today: %1$s</string>
    <string name="nav_left">Left action</string>
    <string name="nav_right">Right action</string>
    <string name="profile_menu_favorite_rides">Favorite Rides</string>
    <string name="profile_menu_ride_history">Ride History</string>
    <string name="profile_menu_usage_report">Usage Report</string>
    <string name="profile_menu_support">Support</string>
    <string name="profile_active_today_placeholder">Active today: 5h</string>
    <string name="profile_logout">Log out</string>
    <string name="logout_title">Log out</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="logout_button">Log out</string>
    <string name="change_password_title">Change password</string>
    <string name="change_password_current_label">Current password</string>
    <string name="change_password_new_label">New password</string>
    <string name="change_password_repeat_label">Repeat password</string>
    <string name="change_password_cancel">Cancel</string>
    <string name="change_password_confirm">Confirm</string>
    <string name="change_password_success">Password changed successfully.</string>
    <string name="error_password_required">Password is required.</string>
    <string name="error_password_too_short">Password must be at least 8 characters long.</string>
    <string name="error_password_letter_required">Password must contain at least one letter.</string>
    <string name="error_password_digit_required">Password must contain at least one digit.</string>
    <string name="error_repeat_required">Please repeat your password.</string>
    <string name="error_repeat_mismatch">Passwords do not match.</string>
    <string name="edit_title">EDIT</string>
    <string name="edit_profile_success">Profile updated successfully.</string>
    <string name="err_firstname_required">Firstname is required.</string>
    <string name="err_firstname_short">Firstname must be at least 2 characters.</string>
    <string name="err_lastname_required">Lastname is required.</string>
    <string name="err_lastname_short">Lastname must be at least 2 characters.</string>
    <string name="err_address_required">Address must be 5-100 characters.</string>
    <string name="err_city_required">City must be 2-50 characters.</string>
    <string name="err_phone_required">Phone number is required.</string>
    <string name="err_phone_invalid">Phone number must contain at least 7 digits.</string>
    <string name="err_model_required">Car model is required.</string>
    <string name="err_type_required">Car type is required.</string>
    <string name="err_licence_required">Licence plate is required.</string>
    <string name="err_seats_required">Number of seats is required.</string>
    <string name="err_seats_invalid">Number of seats must be at least 1.</string>
    <string name="err_model_short">Car model is too short.</string>
    <string name="err_licence_invalid">Licence plate format is invalid.</string>
    <string name="err_firstname_too_long">First name is too long.</string>
    <string name="err_lastname_too_long">Last name is too long.</string>
    <string name="err_address_too_long">Address is too long.</string>
    <string name="err_city_too_long">City is too long.</string>
    <string name="err_model_too_long">Model is too long.</string>
    <string name="car_type_standard">Standard</string>
    <string name="car_type_luxury">Luxury</string>
    <string name="car_type_van">Van</string>
    <string name="info_default_title">Message</string>
    <string name="info_default_message">Some information.</string>
    <string name="profile_update_submitted_title">Profile update submitted</string>
    <string name="profile_update_submitted_body">
    Your profile changes have been submitted and are waiting for administrator approval.
    They will become visible once approved.</string>
    <string name="auth_login_title">Log in</string>
    <string name="auth_login_confirm">Log in</string>
    <string name="auth_email">Email address</string>
    <string name="auth_password">Password</string>
    <string name="auth_forgot_password">Forgot password?</string>
    <string name="auth_create_account">Don\'t have an account? Sign up</string>
    <string name="auth_login_success">You\'ve successfully logged in!</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_email_invalid">Invalid email</string>
    <string name="auth_invalid_credentials">Invalid credentials!</string>
    <string name="auth_enter_email">Enter your email address</string>
    <string name="auth_send_email">Send email</string>
    <string name="auth_cancel">Cancel</string>
    <string name="auth_verification_title">Verification message</string>
    <string name="auth_verification_message">We’ve sent you a verification email. Please check your inbox and click the link.</string>
    <string name="auth_resend">Resend</string>
    <string name="auth_resend_message">Verification email has been sent to your address!</string>
    <string name="auth_reset_password">Reset password</string>
    <string name="auth_new_password">New password</string>
    <string name="auth_repeat_password">Repeat password</string>
    <string name="auth_confirm">Confirm</string>
    <string name="auth_reset_success">You\'ve successfully changed password!</string>
    <string name="auth_close">Close</string>
    <string name="auth_first_name">First name</string>
    <string name="auth_profile_photo">Profile photo</string>
    <string name="profile_photo">Profile photo</string>
    <string name="auth_choose_photo">Choose photo</string>
    <string name="auth_submit">Submit</string>
    <string name="auth_registration_title">Registration</string>
    <string name="auth_regist_success">Successful registration</string>
    <string name="auth_success_regist_message">Your account has been successfully activated!</string>
    <string name="auth_go_login">Go to login</string>
    <string name="book_ride_title">Book a ride</string>
    <string name="label_pickup">Pickup location</string>
    <string name="hint_pickup">Start</string>
    <string name="label_stations">Stations</string>
    <string name="btn_add_station">+Add station</string>
    <string name="label_destination">Destination</string>
    <string name="hint_destination">Finish</string>
    <string name="label_users">Users</string>
    <string name="btn_add_user">+Add user</string>
    <string name="label_car_type">Car type</string>
    <string name="hint_car_type">Select type</string>
    <string name="label_time">Time</string>
    <string name="time_now">Now</string>
    <string name="time_scheduled">Scheduled</string>
    <string name="hint_time">Select time (up to 5h)</string>
    <string name="btn_book_ride">Book a ride</string>
    <string name="dialog_add_station_title">Add station</string>
    <string name="dialog_add_station_hint">Enter location…</string>
    <string name="dialog_add_user_title">Add user</string>
    <string name="dialog_add_user_hint">Enter email of passenger…</string>
    <string name="placeholder_kilometers">Kilometers: 10</string>
    <string name="placeholder_price">Price: 2000 RSD</string>
    <string name="cd_kilometers">Kilometers</string>
    <string name="cd_drive_time">Drive time</string>
    <string name="cd_price">Price</string>
    <string name="confirm_booking_title">Confirm booking</string>
    <string name="confirm_booking_message">Are you sure you want to book this ride?</string>
    <string name="estimated_values">Estimated values:</string>
    <string name="placeholder_kilometers_empty">- km</string>
    <string name="placeholder_drive_time_empty">- min</string>
    <string name="fav_add_title">Add a ride to favourites</string>
    <string name="fav_add_message">Please insert a name for the ride</string>
    <string name="fav_add_hint">Ride name</string>
    <string name="fav_rename_message">Please insert a new name for the ride</string>
    <string name="fav_rename_hint">New name</string>
    <string name="dialog_blocked_title">Can\'t order a ride</string>
    <string name="dialog_blocked_message">You are blocked and cannot order rides while blocked.</string>
    <string name="dialog_blocked_reason_label">Reason:</string>
    <string name="dialog_blocked_support_message">If you believe this is a mistake, please contact support.</string>
    <string name="confirm_start_ride_title">Begin this ride</string>
    <string name="confirm_start_ride_message">Confirm that all passengers are in the car and you\'re ready to begin the trip.</string>
    <string name="login_to_book_a_ride">Log in required</string>
    <string name="login_requirement_message">You need to log in in order to book a ride</string>
    <string name="redirect_to_login_button">Go to login</string>
    <string name="driver_go_active_title">Go Active</string>
    <string name="driver_go_active_msg">When you go active, you will start receiving new ride requests. Are you ready to go active now?</string>
</resources>