<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogLoginRequired"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_panel"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvConfirmTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_to_book_a_ride"
        android:textColor="@color/white"
        android:textSize="@dimen/fs_h2"
        android:fontFamily="@font/roboto_serif_semibold" />

    <TextView
        android:id="@+id/tvConfirmMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/login_requirement_message"
        android:textColor="@color/white"
        android:textSize="@dimen/fs_md"
        android:fontFamily="@font/roboto_serif_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirmCancel"
            style="@style/Widget.Button.Ghost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel" />

        <View
            android:layout_width="12dp"
            android:layout_height="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirmOk"
            style="@style/Widget.Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redirect_to_login_button" />
    </LinearLayout>

</LinearLayout>