<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_panel"
    android:padding="18dp">

    <ImageButton
        android:id="@+id/btnStartClose"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@android:color/transparent"
        android:src="@drawable/close"
        app:tint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/btn_close" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_start_ride_title"
        android:textColor="@color/white"
        android:textSize="@dimen/fs_h2"
        android:fontFamily="@font/roboto_serif_semibold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnStartClose" />

    <TextView
        android:id="@+id/tvMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/confirm_start_ride_message"
        android:textColor="@color/white"
        android:textSize="@dimen/fs_md"
        android:fontFamily="@font/roboto_serif_medium"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/rowBtns"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvMsg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStartCancel"
            style="@style/Widget.Button.Ghost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />

        <View
            android:layout_width="12dp"
            android:layout_height="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStartConfirm"
            style="@style/Widget.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_confirm" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
