<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_panel"
    android:padding="18dp">

    <!-- Close -->
    <ImageButton
        android:id="@+id/btnStatusClose"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@android:color/transparent"
        android:src="@drawable/close"
        app:tint="@color/white"
        android:contentDescription="@string/btn_close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Title -->
    <TextView
        android:id="@+id/tvStatusTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/driver_go_active_title"
        android:textColor="@color/white"
        android:textSize="@dimen/fs_h2"
        android:fontFamily="@font/roboto_serif_semibold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnStatusClose" />

    <!-- Message -->
    <TextView
        android:id="@+id/tvStatusMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/driver_go_active_msg"
        android:textColor="@color/white"
        android:textSize="@dimen/fs_md"
        android:fontFamily="@font/roboto_serif_medium"
        app:layout_constraintTop_toBottomOf="@id/tvStatusTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Buttons row -->
    <LinearLayout
        android:id="@+id/rowStatusBtns"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvStatusMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStatusCancel"
            style="@style/Widget.Button.Ghost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />

        <View
            android:layout_width="12dp"
            android:layout_height="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStatusConfirm"
            style="@style/Widget.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_confirm" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
