<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_panel"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvRenameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/fs_h2"
        android:fontFamily="@font/roboto_serif_semibold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/fav_rename_message"
        android:textColor="@color/white"
        android:textSize="@dimen/fs_md"
        android:fontFamily="@font/roboto_serif_medium" />

    <EditText
        android:id="@+id/etRename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:minHeight="42dp"
        android:background="@drawable/bg_input_normal"
        android:paddingHorizontal="16dp"
        android:textColor="@color/text"
        android:textColorHint="@color/primary_dark"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_serif_medium"
        android:hint="@string/fav_rename_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRenameCancel"
            style="@style/Widget.Button.Ghost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel" />

        <View android:layout_width="12dp" android:layout_height="0dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRenameConfirm"
            style="@style/Widget.Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_confirm" />
    </LinearLayout>

</LinearLayout>
