<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_panel"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvBlockedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_blocked_title"
            android:textColor="@color/secondary"
            android:textSize="@dimen/fs_h2"
            android:fontFamily="@font/roboto_serif_semibold" />

        <ImageButton
            android:id="@+id/btnBlockedClose"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:contentDescription="@string/btn_close" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvBlockedMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_blocked_message"
        android:textColor="@color/white"
        android:textSize="@dimen/fs_md"
        android:fontFamily="@font/roboto_serif_medium" />

    <TextView
        android:id="@+id/tvBlockedReasonLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/dialog_blocked_reason_label"
        android:textColor="@color/white"
        android:textSize="@dimen/fs_md"
        android:fontFamily="@font/roboto_serif_semibold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="6dp"
        android:fillViewport="true">

        <TextView
            android:id="@+id/tvBlockedReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary"
            android:alpha="0.85"
            android:textSize="@dimen/fs_md"
            android:fontFamily="@font/roboto_serif_medium"
            android:text="(reason here)" />
    </ScrollView>

    <TextView
        android:id="@+id/tvBlockedSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_blocked_support_message"
        android:textColor="@color/white"
        android:alpha="0.7"
        android:textSize="@dimen/fs_sm"
        android:fontFamily="@font/roboto_serif_medium" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBlockedOk"
        style="@style/Widget.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/btn_close" />

</LinearLayout>
